apps/chatterbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatterbox
  namespace: chatterbox
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: chatterbox
  ports:
    - name: http
      port: 8004
      targetPort: http
      protocol: TCP
