apps/chatterbox/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chatterbox
  namespace: chatterbox
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tts.oisd.io`)
      kind: Rule
      services:
        - name: chatterbox
          port: 8004
      middlewares:
        - name: default-chain
          namespace: traefik
  tls:
    secretName: wildcard-tls-oisd
